tests/NormalTests/paczka1/fuzzy1/92313680.err
Error in line 1: P6g0vp3Ebb A327 66,4
Error in line 3: P6g0vp3Ebb S192 3,8
Error in line 14: P6g0vp3Ebb S192 19,6
Error in line 18: P6g0vp3Ebb S192 63,67
Error in line 22: A78 A49 77,61
Error in line 15: P6g0vp3Ebb A49 65,5
Error in line 31: A78 A49 -2,0
Error in line 33: SHGZwdBU9 A49 60,4
